--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,8 +1,11 @@
 ---
-title: 'Using MDX'
-description: 'Lorem ipsum dolor sit amet'
-pubDate: 'Jun 01 2024'
-heroImage: '../../assets/blog-placeholder-5.jpg'
+title: "Using MDX"
+excerpt: "Lorem ipsum dolor sit amet"
+cover: "../../assets/blog-placeholder-5.jpg"
+description: "Post finto di test per il blog."
+pubDate: 2022-02-15
+date: "2022-02-15"
+draft: false
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
